# pawa_it_fullstack

./: README.md
backend/: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start_server.py  test_main.py
frontend/: .gitignore  README.md  TESTING.md  jest.config.js  jest.setup.js  package-lock.json  package.json  run_tests.js
frontend/__tests__/: TravelAssistant.simple.test.js  TravelAssistant.test.js  index.test.js  integration.test.js
frontend/components/: TravelAssistant.js
frontend/pages/: index.js
